<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AverageStudent"
    android:orientation="vertical"
    android:padding="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/title_subject"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/txt_name"
                android:layout_marginRight="20dp"/>

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/txt_grade"
                android:inputType="numberDecimal" />

        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bg_green"
            android:text="@string/btn_add"
            android:id="@+id/btnAdd"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/title_subject2"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Español: 2.0\nMatematicas: 3.0"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"/>

    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/bg_green"
        android:text="@string/btn_average"
        android:id="@+id/btnAverage"/>


    </LinearLayout>